Further reduce mobile font sizes and fix bottom spacing
- Reduce .forecast-temp from 15pt to 14pt
- Reduce .forecast-desc from 13pt to 12pt
- Add margin: 0 to .forecast-desc to eliminate extra bottom space

--- a/css/wx.css
+++ b/css/wx.css
@@ -555,12 +555,13 @@ body.dark-mode .notification-icon img {
     }
 
     .forecast-temp {
-        font-size: 15pt;
+        font-size: 14pt;
         margin: 5px 0;
     }
 
     .forecast-desc {
-        font-size: 13pt;
+        font-size: 12pt;
+        margin: 0;
     }
 
     .forecast-popup {
